Style: Social Icon style

--- a/src/index.css
+++ b/src/index.css
@@ -42,3 +42,10 @@
 .fimilarSkills {
   @apply text-gray-500 text-[12px] lg:text-[1rem];
 }
+
+
+/* Home */
+
+.HomeIcon {
+  @apply  rounded text-blue-700 hover:bg-[#F2f4F8] hover:rounded-lg hover:border hover:border-indigo-700;
+}
